--- a/package.json
+++ b/package.json
@@ -44,5 +44,10 @@
   "devDependencies": {
     "axios-mock-adapter": "^1.22.0",
     "tailwindcss": "^3.4.4"
+  },
+  "jest": {
+    "testMatch": [
+      "**/src/**/*.{test,spec}.{js,jsx,ts,tsx}"
+    ]
   }
 }
